<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:layout_marginTop="8dp"
        android:format24Hour="HH:mm"
        android:timeZone="GMT+1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="288sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/start_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button50Minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50_00_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button15Minutes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_15_00_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonPlus1Minutes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/plus1MinuteBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonMinus1Minutes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/minus1MinuteBtn"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus1Minutes"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>