<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomChoiceActivity">

    <Button
        android:id="@+id/room1Btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/turing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/room2Btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/pascal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/room3Btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/lovelace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:src="@drawable/logo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>